--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <ul>
         <li><a href="https://www.meetup.com/mainejs/">Meetup</a></li>
         <li><a href="https://mainejs.org/">Website</a></li>
+        <li>
+          <a href="https://jsconf.com/codeofconduct.html">Code of Conduct</a>
+        </li>
       </ul>
     </main>
     <footer><p>© 2023 Maine JS</p></footer>
