Add meta information

--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Maine JS</title>
+    <title>Maine JS Meetup</title>
     <link
       href="css/styles.css"
       media="screen"
       rel="stylesheet"
       type="text/css"
     />
-    <meta name="description" content="Website of Maine JS" />
+    <meta name="og:title" content="Maine JS Meetup" />
+    <meta
+      name="og:description"
+      content="Welcome to Maine JS, Maine's premiere JavaScript Meetup!"
+    />
+    <meta property="og:image" content="/images/twittercard.jpeg" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
   </head>
   <body>
     <main>
       <img src="/images/logo.png" alt="Maine JS Logo" />
-      <h1><a href="https://mainejs.org/">Maine JS</a></h1>
+      <h1><a href="https://mainejs.org/">Maine JS Meetup</a></h1>
+
+      <p>Welcome to Maine JS, Maine's premiere JavaScript Meetup!</p>
+
       <h2>Our Mission</h2>
       <p>
         Empowering Maine's JavaScript and web development community, fostering
