Update meta tags

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
       rel="stylesheet"
       type="text/css"
     />
+    <meta name="author" content="https://github.com/MaineJS" />
     <meta name="og:title" content="Maine JS Meetup" />
     <meta
       name="og:description"
-      content="Welcome to Maine JS, Maine's premiere JavaScript Meetup!"
+      content="Welcome to Maine JS, Maine's premiere JavaScript Meetup! Our mission: empowering Maine's JavaScript and web development community, fostering collaboration and innovation among passionate technologists and tech enthusiasts in the Pine Tree State."
     />
     <meta property="og:image" content="/images/twittercard.jpeg" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
