Add meta description

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       name="og:description"
       content="Welcome to Maine JS, Maine's premiere JavaScript Meetup! Our mission: empowering Maine's JavaScript and web development community, fostering collaboration and innovation among passionate technologists and tech enthusiasts in the Pine Tree State."
     />
+    <meta
+      name="description"
+      content="Welcome to Maine JS, Maine's premiere JavaScript Meetup! Our mission: empowering Maine's JavaScript and web development community, fostering collaboration and innovation among passionate technologists and tech enthusiasts in the Pine Tree State."
+    />
     <meta property="og:image" content="/images/twittercard.jpeg" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
   </head>
