--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 
       <h2>Links</h2>
       <ul>
-        <li><a href="https://www.meetup.com/mainejs/">Meetup</a></li>
-        <li><a href="https://mainejs.org/">Website</a></li>
         <li>
           <a href="https://jsconf.com/codeofconduct.html">Code of Conduct</a>
         </li>
+        <li><a href="https://mainejs.org/">Website</a></li>
+        <li><a href="https://www.meetup.com/mainejs/">Meetup</a></li>
+        <li><a href="https://discord.gg/pPdU3eJrDr">Discord</a></li>
       </ul>
     </main>
     <footer><p>© 2023 Maine JS</p></footer>
