Apply style improvements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="https://github.com/MaineJS" />
     <meta name="og:title" content="Maine JS Meetup" />
     <meta
@@ -22,8 +23,9 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
   </head>
   <body>
-    <main>
+    <main class="container">
       <img src="/images/logo.png" alt="Maine JS Logo" />
+
       <h1><a href="https://mainejs.org/">Maine JS Meetup</a></h1>
 
       <p>Welcome to Maine JS, Maine's premiere JavaScript Meetup!</p>
