Style links, add links, rearrange links

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
   </head>
   <body>
     <main class="container">
-      <img src="/images/logo.png" alt="Maine JS Logo" />
+      <a href="/">
+        <img src="/images/logo.png" alt="Maine JS Logo" />
+      </a>
 
-      <h1><a href="https://mainejs.org/">Maine JS Meetup</a></h1>
+      <h1><a href="/">Maine JS Meetup</a></h1>
 
       <p>Welcome to Maine JS, Maine's premiere JavaScript Meetup!</p>
 
@@ -39,12 +41,11 @@
 
       <h2>Links</h2>
       <ul>
+        <li><a href="https://www.meetup.com/mainejs/">Meetup</a></li>
+        <li><a href="https://discord.gg/pPdU3eJrDr">Discord</a></li>
         <li>
           <a href="https://jsconf.com/codeofconduct.html">Code of Conduct</a>
         </li>
-        <li><a href="https://mainejs.org/">Website</a></li>
-        <li><a href="https://www.meetup.com/mainejs/">Meetup</a></li>
-        <li><a href="https://discord.gg/pPdU3eJrDr">Discord</a></li>
       </ul>
     </main>
     <footer><p>© 2023 Maine JS</p></footer>
