--- a/index.html
+++ b/index.html
@@ -21,7 +21,23 @@
     />
     <meta property="og:image" content="/images/twittercard.jpeg" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-LY55YLXDM2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-LY55YLXDM2");
+    </script>
   </head>
+
   <body>
     <main class="container">
       <a href="/">
